Add some other utilities and improve typing and documentation (TOC & separated examples & "Usage with Jest")

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "objectools",
-  "version": "1.0.4",
+  "version": "2.0.1",
   "description": "Useful easy-to-use utilities to for javascript objects",
   "keywords": [
     "object-utilitis",
     "map-object",
     "filter-object",
     "forEach-object",
+    "object-length",
+    "object-size",
+    "object-keys",
+    "object-keys-set",
+    "object-values",
     "find-object",
+    "indexOf-object",
+    "lastIndexOf-object",
+    "find-object",
+    "findIndex-object",
     "sort-object",
+    "sortByValues-object",
     "some-object",
     "every-object",
     "transpose-object",
