--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "declaration": true,
     "outDir": "dist",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["bun-types"]
   },
   "include": ["src"]
 }
